# Sift

./: .env.example  .gitignore  README.md  render.yaml  requirements.txt  sample_transactions.csv  start.sh  vercel.json
backend/: .env.example  ModelManager.py  app.py  pyproject.toml  railway.toml  requirements.txt
backend/Agent/: conversational.py  orchestrator.py  synthesizer.py
backend/Categorization/: constants.py  llm_categorizer.py  merchant_db.py  rule_categorizer.py  rules.json
backend/Data/: Lavelle.csv  processing.py  wealthsimple_demo.csv
backend/Data/Raw/: 360.xlsx  Lavelle.xlsx  McDonalds.xlsx  Pai.xlsx
backend/Data/Restaurants/: 360.csv  360_The_Restaurant_at_the_CN_Tower.json  McDonalds.csv  Pai.csv
backend/Data/Training/: absa_training.csv
backend/Evaluator/: evaluator.py
backend/Ingestion/: README.md  format_detector.py  normalizer.py
backend/LLM/: client.py
backend/Models/absa-v1/: config.json  tokenizer_config.json
backend/Scripts/: export_dashboard_data.py
backend/Sentiment/: impact_attribution.py  llm_client.py  semantic_analyzer.py  synthetic_generator.py
backend/Tools/: anomaly_detector.py  behavioral_correlation.py  financial_resilience.py  simulator.py  spending_impact.py  subscription_hunter.py  temporal_patterns.py
backend/Training/: dataloader.py  model.py  trainer.py  training_augmentor.py
backend/Training/lightning_logs/version_0/: events.out.tfevents.1771556297.Shirleys-MacBook-Pro.local.11929.0  (+1 more)
backend/tests/: test_api_integration.py  test_llm_categorizer.py  test_pipeline.py  test_simulator.py  test_tools.py
(+96 files in other folders)
